2004-10-18  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: coding style
	and const cleanups.

2004-10-17  MenTaLguY  <mental@rydia.net>

	* share/templates/Makefile.am, share/templates/layers.svg:
	  added a layer template 

	* src/widgets/layer-selector.h, src/widgets/layer-selector.cpp:
	  more layer selector work

2004-10-15  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/PathSimplify.cpp: remove #ifdef
	pseudo_douglas_pecker code that wasn't being used.

2004-10-15  MenTaLguY  <mental@rydia.net>

	* src/view.h: removed obsolete status message functions

	* src/attributes.h: remove unused #define

	* src/sp-object.cpp: fix for bug #1048268 (inkscape:collect being written
	  in "plain SVG" files)

	* src/sp-item.h, src/sp-item.cpp: added isLocked() and isHidden()
	  predicates

	* src/sp-item.cpp, src/sp-style.cpp: basic support for visibility CSS
	  property

2004-10-14  Ted Gould  <ted@gould.cx>

	* share/extension/*.inkmod -> *.inx
	src/extension/init.cpp

	Changing the filename extension that is used to identify Inkscape
	extensions to the one specified in the design document.

2004-10-14  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: more 3.4 fixes

2004-10-13  MenTaLguY  <mental@rydia.net>

	* src/util/list.h, src/util/forward-pointer-iterator.h:

	  fixes to (hopefully) build with g++ 3.4 (and generally be less evil
	  anyway)

2004-10-14  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/int-line.cpp: coding style cleanups.

	* src/livarot/float-line.cpp, src/livarot/float-line.h:
	refactoring, removal of dead code.

	* src/display/guideline.cpp, src/display/guideline.h: coding style
	cleanups.

	* src/livarot/Path.cpp, src/livarot/Path.h,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathSimplify.cpp, src/livarot/PathStroke.cpp: merge
	Path::path_lineto and Path::path_lineto_b.

2004-10-14  Carl Hetherington <inkscape@carlh.net>
